--- a/src/app/components/datosclientes/datosclientes.component.html
+++ b/src/app/components/datosclientes/datosclientes.component.html
@@ -68,7 +68,7 @@
 
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
                   <li [ngbNavItem]="1">
-                    <a ngbNavLink>Datos Generales</a>
+                    <a ngbNavLink style="color:#24a4cc">Datos Generales</a>
                     <ng-template ngbNavContent>
 
                       <div class="container">
@@ -201,7 +201,7 @@
                     </ng-template>
                   </li>
                   <li *ngIf="!bCliente" [ngbNavItem]="2">
-                    <a class="CamposFonelli" ngbNavLink>Condiciones</a>
+                    <a style="color:#24a4cc" ngbNavLink>Condiciones</a>
                     <ng-template ngbNavContent>
                       <div class="container">
                         <div class="row">  
@@ -277,7 +277,7 @@
                     </ng-template>
                   </li>
                   <li [ngbNavItem]="3">
-                    <a class="CamposFonelli" ngbNavLink>Contactos</a>
+                    <a style="color:#24a4cc" ngbNavLink>Contactos</a>
                     <ng-template ngbNavContent>
                       <div class="container">
                         <div class="row">  
@@ -366,9 +366,7 @@
 
    
               
-      <div *ngIf="!bCliente">
-        <h4>Expediente</h4>
-      </div>
+    
    </div>
 </section>
 
